add file structure

--- a/public/mobx.html
+++ b/public/mobx.html
@@ -16,6 +16,24 @@
     <h3>Mobx Kanban App</h3>
     <div id="app"></div>
 
+    <pre>
+      mobx-kanban/.babelrc
+      mobx-kanban/app/components/App.jsx
+      mobx-kanban/app/components/Editable.jsx
+      mobx-kanban/app/components/ItemTypes.js
+      mobx-kanban/app/components/Lane.jsx
+      mobx-kanban/app/components/Lanes.jsx
+      mobx-kanban/app/components/Note.jsx
+      mobx-kanban/app/components/Notes.jsx
+      mobx-kanban/app/index.jsx
+      mobx-kanban/app/libs/storage.js
+      mobx-kanban/app/main.css
+      mobx-kanban/app/stores/LaneStore.js
+      mobx-kanban/app/stores/NoteStore.js
+      mobx-kanban/package.json
+      mobx-kanban/webpack.config.js
+    </pre>
+
     <script src="mobx-manifest.js"></script>
     <script src="mobx-vendor.js"></script>
     <script src="mobx-style.js"></script>
