--- a/public/cerebral.html
+++ b/public/cerebral.html
@@ -16,6 +16,44 @@
     <h3>Cerebral Kanban App</h3>
     <div id="app"></div>
 
+    <pre>
+      cerebral-kanban/.babelrc
+      cerebral-kanban/app/components/App.jsx
+      cerebral-kanban/app/components/Editable.jsx
+      cerebral-kanban/app/components/Lane.jsx
+      cerebral-kanban/app/components/Lanes.jsx
+      cerebral-kanban/app/components/Note.jsx
+      cerebral-kanban/app/components/Notes.jsx
+      cerebral-kanban/app/computed/lanes.js
+      cerebral-kanban/app/constants/itemTypes.js
+      cerebral-kanban/app/index.jsx
+      cerebral-kanban/app/main.css
+      cerebral-kanban/app/modules/Kanban/actions/attachNoteToLane.js
+      cerebral-kanban/app/modules/Kanban/actions/createLane.js
+      cerebral-kanban/app/modules/Kanban/actions/createNote.js
+      cerebral-kanban/app/modules/Kanban/actions/deleteLane.js
+      cerebral-kanban/app/modules/Kanban/actions/deleteNote.js
+      cerebral-kanban/app/modules/Kanban/actions/displayAllLanes.js
+      cerebral-kanban/app/modules/Kanban/actions/moveNote.js
+      cerebral-kanban/app/modules/Kanban/actions/removeRelatedNotes.js
+      cerebral-kanban/app/modules/Kanban/actions/updateLane.js
+      cerebral-kanban/app/modules/Kanban/actions/updateNote.js
+      cerebral-kanban/app/modules/Kanban/index.js
+      cerebral-kanban/app/modules/Kanban/services/uuid.js
+      cerebral-kanban/app/modules/Kanban/signals/laneCreated.js
+      cerebral-kanban/app/modules/Kanban/signals/laneDeleted.js
+      cerebral-kanban/app/modules/Kanban/signals/laneUpdated.js
+      cerebral-kanban/app/modules/Kanban/signals/noteAttachedToLane.js
+      cerebral-kanban/app/modules/Kanban/signals/noteCreated.js
+      cerebral-kanban/app/modules/Kanban/signals/noteDeleted.js
+      cerebral-kanban/app/modules/Kanban/signals/noteMoved.js
+      cerebral-kanban/app/modules/Kanban/signals/noteUpdated.js
+      cerebral-kanban/app/storage.js
+      cerebral-kanban/package.json
+      cerebral-kanban/templates/index.tpl
+      cerebral-kanban/webpack.config.js
+    </pre>
+
     <script src="cerebral-manifest.js"></script>
     <script src="cerebral-vendor.js"></script>
     <script src="cerebral-style.js"></script>
