--- a/public/redux.html
+++ b/public/redux.html
@@ -15,6 +15,33 @@
 
     <h3>Redux Kanban App</h3>
     <div id="app"></div>
+    <pre>
+      redux-kanban/.babelrc
+      redux-kanban/app/actions/lanes.js
+      redux-kanban/app/actions/notes.js
+      redux-kanban/app/components/Editable.jsx
+      redux-kanban/app/components/Lane.jsx
+      redux-kanban/app/components/Lanes.jsx
+      redux-kanban/app/components/Note.jsx
+      redux-kanban/app/components/Notes.jsx
+      redux-kanban/app/constants/itemTypes.js
+      redux-kanban/app/containers/App.jsx
+      redux-kanban/app/containers/DevTools.jsx
+      redux-kanban/app/containers/Root.dev.jsx
+      redux-kanban/app/containers/Root.jsx
+      redux-kanban/app/containers/Root.prod.jsx
+      redux-kanban/app/index.jsx
+      redux-kanban/app/libs/storage.js
+      redux-kanban/app/main.css
+      redux-kanban/app/reducers/index.js
+      redux-kanban/app/reducers/lanes.js
+      redux-kanban/app/reducers/notes.js
+      redux-kanban/app/store/configureStore.dev.js
+      redux-kanban/app/store/configureStore.js
+      redux-kanban/app/store/configureStore.prod.js
+      redux-kanban/package.json
+      redux-kanban/webpack.config.js
+    </pre>
 
     <script src="redux-manifest.js"></script>
     <script src="redux-vendor.js"></script>
